Fix nav bar item alignment on larger screens

--- a/src/css/section/navbar.css
+++ b/src/css/section/navbar.css
@@ -45,6 +45,7 @@
 
 #navbar-list.inline {
   display: inline-flex;
+  align-self: center;
 }
 
 #navbar-list.expanded li {
